# iCompile

./: CMakeLists.txt  README.md  main.c
resources/: index.html
src/: main.c
src/server/: server.c  server.h
src/tests/: test_suite.c  test_suite.h
src/web/: index.html
src/webProvider/: htmlHeaderParser.c  htmlHeaderParser.h  webProvider.c  webProvider.h
tests/: test_suite.c  test_suite.h
tests/webProvider_test/: htmlHeaderParser_test.c  htmlHeaderParser_test.h  webProvider_test.c  webProvider_test.h
